--- a/Develop/index.html
+++ b/Develop/index.html
@@ -10,7 +10,8 @@
 
 <body>
     <!-- changed div to "header" -->
-    <header class="header">
+    <!-- removed class -->
+    <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -86,7 +87,7 @@
         </div>
     </section>
     <!-- changed div to "footer" -->
-    <footer class="footer">
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
