--- a/Develop/index.html
+++ b/Develop/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <!-- added title "Horiseon -->
-    <title>Horiseon</title>
+    <title>Horiseon abc</title>
 </head>
 
 <body>
